Fix the spacing in the file

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
-h3,
-h2 {
+div {
   color: #fff;
   text-align: center;
 }
